--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -34,26 +34,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set reusable strings (Linux and macOS)
+      - name: Set reusable strings
         id: strings
         shell: bash
         if: matrix.os != 'windows-latest'
         run: |
           echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-      - name: Set reusable strings (Windows)
-        id: strings
-        shell: bash
-        if: matrix.os == 'windows-latest'
-        run: |
-          echo "build-output-dir=${{ github.workspace }}\\build" >> "$GITHUB_OUTPUT"
-
-      - name: Configure CMake
+      - name: Configure CMake (Linux and macOS)
+        if: matrix.os != 'windows-latest'
         run: |
           cmake -B ${{ steps.strings.outputs.build-output-dir }} \
           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} \
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
           -S ${{ github.workspace }}
+
+      - name: Configure CMake (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          cmake -B ${{ steps.strings.outputs.build-output-dir }} -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -S ${{ github.workspace }}
 
       - name: Build
         run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
