--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -46,7 +46,7 @@ jobs:
         shell: bash
         if: matrix.os == 'windows-latest'
         run: |
-          echo "build-output-dir=${{ github.workspace }}\\build" >> "$GITHUB_OUTPUT"
+          echo "build-output-dir=${{ github.workspace }}\build" >> "$GITHUB_OUTPUT"
 
       - name: Configure CMake
         run: |
