--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -13,51 +13,40 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         build_type: [Release]
         cpp_compiler: [g++, clang++, cl]
         include:
-          - os: windows-latest
-            cpp_compiler: cl
           - os: ubuntu-latest
             cpp_compiler: g++
           - os: ubuntu-latest
             cpp_compiler: clang++
         exclude:
-          - os: windows-latest
-            cpp_compiler: g++
-          - os: windows-latest
-            cpp_compiler: clang++
           - os: ubuntu-latest
             cpp_compiler: cl
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set reusable strings (Linux and macOS)
-        id: linux_mac_strings
+      - name: Set reusable strings
+        id: strings
         shell: bash
         if: matrix.os != 'windows-latest'
         run: |
           echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-      - name: Set reusable strings (Windows)
-        id: windows_strings
-        shell: bash
-        if: matrix.os == 'windows-latest'
+      - name: Configure CMake (Linux and macOS)
+        if: matrix.os != 'windows-latest'
         run: |
-          echo "build-output-dir=${{ github.workspace }}\build" >> "$GITHUB_OUTPUT"
-
-      - name: Configure CMake
-        run: |
-          cmake -B ${{ steps.linux_mac_strings.outputs.build-output-dir || steps.windows_strings.outputs.build-output-dir }} \
+          cmake -B ${{ steps.strings.outputs.build-output-dir }} \
           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }} \
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
           -S ${{ github.workspace }}
 
+
       - name: Build
-        run: cmake --build ${{ steps.linux_mac_strings.outputs.build-output-dir || steps.windows_strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+        run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
 
       - name: Test
-        working-directory: ${{ steps.linux_mac_strings.outputs.build-output-dir || steps.windows_strings.outputs.build-output-dir }}
+        working-directory: ${{ steps.strings.outputs.build-output-dir }}
         run: ctest --build-config ${{ matrix.build_type }}
